# ghops

./: .gitignore  404.html  CLAUDE.md  GEMINI.md  Makefile  README.md  ROADMAP.md  TODO.md  __main__.py  all.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test_query_improvements.py  test_simple_query.py  test_social_media.py  test_tags_integration.py
api/integrations/: index.html
architecture-vision/: index.html
audit-command/: index.html
catalog-query/: index.html
changelog/: index.html
contributing/: index.html
design/CLI_DESIGN_DECISIONS/: index.html
design/GIT_COMMANDS_DESIGN/: index.html
design/SOCIAL_MEDIA_ENHANCEMENT_DESIGN/: index.html
design/VERSION_MANAGEMENT_IMPLEMENTATION/: index.html
docs/: architecture-vision.md  audit-command.md  catalog-query.md  changelog.md  contributing.md  docs-command.md  export-command.md  future-plans.md  getting-started.md  index.md  list-command.md  progress-refactoring-guide.md  query-cookbook.md  shell-vfs.md  tui.md  tutorials.md  usage.md
docs-command/: index.html
docs/api/: integrations.md
docs/design/: CLI_DESIGN_DECISIONS.md  GIT_COMMANDS_DESIGN.md  SOCIAL_MEDIA_ENHANCEMENT_DESIGN.md  VERSION_MANAGEMENT_IMPLEMENTATION.md
docs/integrations/: clustering.md  overview.md  workflow.md
docs/tutorials/: notebooks.md
examples/: enhanced_list_examples.sh  ghops.service  hugo_export_example.md  jq_transformations.sh  refactored_command_example.py  template_example.md  tui_demo.py
examples/workflows/: morning-routine.yaml  release-pipeline.yaml
export-command/: index.html
future-plans/: index.html
getting-started/: index.html
ghops/: analytics_store.py  cli.py  cli_utils.py  component_hooks.py  config.py  core.py  event_detector.py  event_handlers.py  events.py  export_components.py  export_components_impl.py  format_utils.py  ghops.py  hugo_export.py  hugo_exporter.py  metadata.py  progress.py  pypi.py  query.py  render.py  repo_filter.py  reporting.py  service.py  simple_query.py  social.py  tags.py  templates.py  utils.py
ghops/commands/: ai.py  analysis.py  analytics.py  audit.py  catalog.py  config.py  customize.py  docs.py  export.py  generate_post.py  get.py  license.py  list.py  network.py  poll.py  publish.py  query.py  service.py  shell.py  social.py  status.py  templates.py  update.py
ghops/integrations/: __init__.py  network_analysis.py
ghops/llm/: __init__.py  content_context.py  platforms.py  prompts.py  providers.py  (+2 more)
integrations/: README.md
list-command/: index.html
notebooks/: 01_getting_started.ipynb  02_clustering_analysis.ipynb  03_workflow_orchestration.ipynb  04_advanced_integrations.ipynb  05_data_visualization.ipynb
progress-refactoring-guide/: index.html
query-cookbook/: index.html
scripts/: bump_version.py
search/: search_index.json
shell-vfs/: index.html
tests/: README_NEW_TESTS.md  __init__.py  conftest.py  run_tests.py  test_analytics_store.py  test_config.py  test_core.py  test_event_detector.py  test_events.py  test_get.py  test_gitignore.py  test_hugo_exporter.py  test_integration.py  test_license.py  test_main.py  test_metadata.py  test_platforms.py  test_publish.py  test_publish_integration.py  test_pypi.py  test_render.py  test_shell_commands.py  test_shell_vfs.py  test_simple_query.py  test_social.py  test_status.py  test_tags.py  test_template_loader.py  test_templates.py  test_update.py  test_utils.py  test_version_manager.py
tui/: index.html
tutorials/: index.html
usage/: index.html
(+40 files in other folders)
